k8s/apps/linkerd/linkerd-viz/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-web-ingress
  namespace: linkerd-viz
  annotations:
    meta.helm.sh/release-name: linkerd-viz
    meta.helm.sh/release-namespace: linkerd-viz
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:web.linkerd-viz.svc.cluster.local:8084
    traefik.ingress.kubernetes.io/router.middlewares: "networking-authelia@kubernetescrd"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    hajimari.io/enable: "true"
    hajimari.io/icon: chip
    hajimari.io/appName: Linkerd
spec:
  tls:
    - hosts:
        - "linkerd.${SECRET_DOMAIN}"
      secretName: linkerd-viz-tls
  rules:
    - host: "linkerd.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
